# adebe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  context.md  docker-compose.yml  main.py  migrate_db.py  pyproject.toml  verify_json_serialization.py
app/: auth.py  database.py  dependencies.py  exceptions.py  main.py  models.py
app/api/: backups.py  databases.py  elasticsearch.py  mongodb.py  mysql.py  postgresql.py  sqlite.py
app/connectors/: base.py  es_connector.py  mongo_connector.py  mysql_connector.py  postgres_connector.py  sqlite_connector.py
app/core/: celery_app.py  storage.py
app/data/: app.db  users.yaml
app/services/: backup_service.py  elasticsearch_service.py  mongo_service.py  mysql_service.py  postgresql_service.py  sqlite_service.py
app/services/backups/: __init__.py  base.py  mongodb.py  mysql.py  postgresql.py
app/templates/: base.html  dashboard.html  error.html  login.html  query.html  visualization.html
app/templates/components/: category_select.html  delete_modal.html  sidebar.html
app/templates/databases/: elasticsearch.html  form.html  list.html  mongodb.html  mysql_browse.html  mysql_structure.html  sqlite.html
app/templates/databases/elasticsearch/: dashboard.html  inspect.html  query_modal.html
app/templates/databases/mongodb/: browse.html  create_collection.html  create_user.html  dashboard_admin.html  dashboard_user.html  edit.html  edit_user.html  insert.html  query_modal.html  (+1 more)
app/templates/operations/: backup.html  export.html  import.html
app/utils/: security.py
app/worker/: tasks.py
(+28 files in other folders)
