[project]
name = "adebe"
version = "0.1.0"
description = "Database Management Dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.5",
    "celery>=5.6.0",
    "cryptography>=46.0.3",
    "elasticsearch>=9.2.0",
    "fastapi>=0.123.5",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "minio>=7.2.20",
    "mysql-connector-python>=9.5.0",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
